# aias-lab2-spring-2024

./: .gitignore  README.md  setup_my_env.sh
general-scripts/: .zshrc  lab2-env.sh  setup_my_env.sh
hw2-1/: hw.py  util.py
hw2-2/: hw.py  onnx_helper.py  util.py
hw2-3/: dynamic_linear.py  hw.py  onnx_helper.py  util.py
hw2-4/: compare.py  compare_mem_requirement.py  convertor.py  setup.sh  setup_cpp.sh
hw2-4/cpp/: CMakeLists.txt
hw2-4/cpp/src/: hw.cpp
lab2-1/: lab2-1.ipynb
lab2-2/: lab2-2.ipynb
lab2-3/: find_operator.py  get_attribute.py  get_bandwidth.py  tensor_size.py
lab2-4/: reset18.py
lab2-4/analyzer/: CMakeLists.txt  analyzer.cc
